--- a/src/sample/Graph_Canvas.fxml
+++ b/src/sample/Graph_Canvas.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.*?>
+<?import javafx.scene.shape.*?>
 <?import com.jfoenix.controls.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.scene.control.*?>
@@ -10,19 +12,12 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 
-<GridPane alignment="center" hgap="10" style="-fx-background-color: #FFFFFF;" vgap="10" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Graph_Canvas_Controller">
-    <columnConstraints>
-        <ColumnConstraints />
-    </columnConstraints>
-    <rowConstraints>
-        <RowConstraints />
-    </rowConstraints>
-    <children>
-        <Pane prefHeight="200.0" prefWidth="200.0">
-            <children>
-                <JFXButton fx:id="bAddOne" buttonType="RAISED" layoutX="83.0" layoutY="88.0" ripplerFill="WHITE" style="-fx-background-color: #2196F3;" text="+1" />
-                <JFXTextArea fx:id="count" editable="false" layoutX="78.0" layoutY="42.0" maxWidth="92.0" minWidth="41.0" prefHeight="31.0" prefWidth="41.0" text="0" />
-            </children>
-        </Pane>
-    </children>
-</GridPane>
+<Pane minHeight="200.0" minWidth="200.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Graph_Canvas_Controller">
+      <children>
+      <AnchorPane prefHeight="325.0" prefWidth="600.0">
+         <children>
+                <JFXButton fx:id="bAddOne" buttonType="RAISED" layoutX="14.0" layoutY="14.0" ripplerFill="WHITE" style="-fx-background-color: #2196F3;" text="Not Add Mode" />
+         </children>
+      </AnchorPane>
+      </children>
+  </Pane>
