--- a/src/sample/Graph_Canvas.fxml
+++ b/src/sample/Graph_Canvas.fxml
@@ -1,23 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.*?>
-<?import javafx.scene.shape.*?>
-<?import com.jfoenix.controls.*?>
-<?import javafx.scene.text.*?>
-<?import javafx.scene.control.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 
-<Pane minHeight="200.0" minWidth="200.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Graph_Canvas_Controller">
+<Pane minHeight="200.0" minWidth="200.0" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Graph_Canvas_Controller">
       <children>
-      <AnchorPane prefHeight="325.0" prefWidth="600.0">
+      <AnchorPane prefHeight="600.0" prefWidth="900.0">
          <children>
-                <JFXButton fx:id="bAddOne" buttonType="RAISED" layoutX="14.0" layoutY="14.0" ripplerFill="WHITE" style="-fx-background-color: #2196F3;" text="Not Add Mode" />
-            <JFXButton fx:id="clear" buttonType="RAISED" layoutX="14.0" layoutY="68.0" prefHeight="25.0" prefWidth="96.0" style="-fx-background-color: #2196F3;" text="Clear" />
+            <Pane prefHeight="600.0" prefWidth="138.0">
+               <children>
+                  <Button fx:id="bAddOne" layoutX="14.0" layoutY="41.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="108.0" text="Add Nodes" />
+                  <Button layoutX="14.0" layoutY="74.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="108.0" text="Add Edges" />
+                  <Button fx:id="clear" layoutX="14.0" layoutY="116.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="108.0" text="Clear All" />
+               </children>
+            </Pane>
          </children>
       </AnchorPane>
       </children>
