--- a/src/sample/Graph_Canvas.fxml
+++ b/src/sample/Graph_Canvas.fxml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
@@ -10,9 +12,14 @@
          <children>
             <Pane prefHeight="600.0" prefWidth="138.0">
                <children>
-                  <Button fx:id="bAddOne" layoutX="14.0" layoutY="41.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="108.0" text="Add Nodes" />
-                  <Button layoutX="14.0" layoutY="74.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="108.0" text="Add Edges" />
-                  <Button fx:id="clear" layoutX="14.0" layoutY="116.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="108.0" text="Clear All" />
+                  <Button fx:id="bAddOne" layoutX="14.0" layoutY="146.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="108.0" text="Add Nodes" />
+                  <Button fx:id="bAddEdges" layoutX="14.0" layoutY="179.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="108.0" text="Add Edges" />
+                  <Button fx:id="clear" layoutX="14.0" layoutY="212.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="108.0" text="Clear All" />
+                  <Label alignment="CENTER" layoutX="14.0" layoutY="14.0" prefHeight="17.0" prefWidth="108.0" text="Message" />
+                  <Label fx:id="messageBox" alignment="TOP_LEFT" layoutX="14.0" layoutY="31.0" prefHeight="89.0" prefWidth="108.0" text="Create your graph! Click &quot;Add Nodes&quot; to begin." wrapText="true" />
+                  <Label alignment="TOP_CENTER" contentDisplay="TOP" layoutX="14.0" layoutY="124.0" prefHeight="17.0" prefWidth="108.0" text="Graph Creation" />
+                  <Label alignment="TOP_CENTER" contentDisplay="TOP" layoutX="14.0" layoutY="265.0" prefHeight="17.0" prefWidth="108.0" text="Select Algorithm" />
+                  <ChoiceBox fx:id="algSelect" layoutX="14.0" layoutY="287.0" prefHeight="25.0" prefWidth="108.0" />
                </children>
             </Pane>
          </children>
