--- a/src/sample/Graph_Canvas.fxml
+++ b/src/sample/Graph_Canvas.fxml
@@ -6,20 +6,21 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane minHeight="200.0" minWidth="200.0" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Graph_Canvas_Controller">
+<Pane minHeight="600.0" minWidth="900.0" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Graph_Canvas_Controller">
       <children>
       <AnchorPane prefHeight="600.0" prefWidth="900.0">
          <children>
-            <Pane prefHeight="600.0" prefWidth="138.0">
+            <Pane prefHeight="600.0" prefWidth="900.0">
                <children>
                   <Button fx:id="bAddOne" layoutX="14.0" layoutY="146.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="108.0" text="Add Nodes" />
                   <Button fx:id="bAddEdges" layoutX="14.0" layoutY="179.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="108.0" text="Add Edges" />
                   <Button fx:id="clear" layoutX="14.0" layoutY="212.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="108.0" text="Clear All" />
                   <Label alignment="CENTER" layoutX="14.0" layoutY="14.0" prefHeight="17.0" prefWidth="108.0" text="Message" />
-                  <Label fx:id="messageBox" alignment="TOP_LEFT" layoutX="14.0" layoutY="31.0" prefHeight="89.0" prefWidth="108.0" text="Create your graph! Click &quot;Add Nodes&quot; to begin." wrapText="true" />
+                  <Label fx:id="messageBox" alignment="TOP_LEFT" contentDisplay="CENTER" layoutX="14.0" layoutY="31.0" prefHeight="89.0" prefWidth="108.0" text="Create your graph! Click &quot;Add Nodes&quot; to begin." textAlignment="CENTER" wrapText="true" />
                   <Label alignment="TOP_CENTER" contentDisplay="TOP" layoutX="14.0" layoutY="124.0" prefHeight="17.0" prefWidth="108.0" text="Graph Creation" />
                   <Label alignment="TOP_CENTER" contentDisplay="TOP" layoutX="14.0" layoutY="265.0" prefHeight="17.0" prefWidth="108.0" text="Select Algorithm" />
                   <ChoiceBox fx:id="algSelect" layoutX="14.0" layoutY="287.0" prefHeight="25.0" prefWidth="108.0" />
+                  <Button fx:id="bRunAlg" layoutX="14.0" layoutY="320.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="108.0" text="Run Algorithm" />
                </children>
             </Pane>
          </children>
