--- a/src/sample/Graph_Canvas.fxml
+++ b/src/sample/Graph_Canvas.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -12,15 +13,23 @@
          <children>
             <Pane prefHeight="600.0" prefWidth="900.0">
                <children>
-                  <Button fx:id="bAddOne" layoutX="14.0" layoutY="146.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="108.0" text="Add Nodes" />
-                  <Button fx:id="bAddEdges" layoutX="14.0" layoutY="179.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="108.0" text="Add Edges" />
-                  <Button fx:id="clear" layoutX="14.0" layoutY="212.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="108.0" text="Clear All" />
+                  <Button fx:id="bAddOne" layoutX="14.0" layoutY="200.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="108.0" text="Add Nodes" />
+                  <Button fx:id="bAddEdges" layoutX="14.0" layoutY="233.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="108.0" text="Add Edges" />
+                  <Button fx:id="clear" layoutX="14.0" layoutY="333.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="108.0" text="Delete All" />
                   <Label alignment="CENTER" layoutX="14.0" layoutY="14.0" prefHeight="17.0" prefWidth="108.0" text="Message" />
                   <Label fx:id="messageBox" alignment="TOP_LEFT" contentDisplay="CENTER" layoutX="14.0" layoutY="31.0" prefHeight="89.0" prefWidth="108.0" text="Create your graph! Click &quot;Add Nodes&quot; to begin." textAlignment="CENTER" wrapText="true" />
                   <Label alignment="TOP_CENTER" contentDisplay="TOP" layoutX="14.0" layoutY="124.0" prefHeight="17.0" prefWidth="108.0" text="Graph Creation" />
-                  <Label alignment="TOP_CENTER" contentDisplay="TOP" layoutX="14.0" layoutY="265.0" prefHeight="17.0" prefWidth="108.0" text="Select Algorithm" />
-                  <ChoiceBox fx:id="algSelect" layoutX="14.0" layoutY="287.0" prefHeight="25.0" prefWidth="108.0" />
-                  <Button fx:id="bRunAlg" layoutX="14.0" layoutY="320.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="108.0" text="Run Algorithm" />
+                  <Label alignment="TOP_CENTER" contentDisplay="TOP" layoutX="14.0" layoutY="384.0" prefHeight="17.0" prefWidth="108.0" text="Select Algorithm" />
+                  <ChoiceBox fx:id="algSelect" layoutX="14.0" layoutY="406.0" prefHeight="25.0" prefWidth="108.0" />
+                  <Button fx:id="bRunAlg" layoutX="14.0" layoutY="439.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="108.0" text="Run Algorithm" />
+                  <Button fx:id="deleteNode" layoutX="14.0" layoutY="266.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="108.0" text="Delete a Node" />
+                  <Button fx:id="deleteEdge" layoutX="14.0" layoutY="299.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="108.0" text="Delete an Edge" />
+                  <CheckBox fx:id="directed" alignment="TOP_RIGHT" contentDisplay="CENTER" layoutX="25.0" layoutY="149.0" mnemonicParsing="false" prefHeight="17.0" prefWidth="88.0" text="Directed" textAlignment="CENTER" />
+                  <CheckBox fx:id="weighted" alignment="TOP_RIGHT" layoutX="25.0" layoutY="173.0" mnemonicParsing="false" prefHeight="17.0" prefWidth="88.0" text="Weighted" textAlignment="CENTER" />
+                  <Button fx:id="stepBack" layoutX="243.0" layoutY="545.0" mnemonicParsing="false" text="Step Backward" />
+                  <Button fx:id="stepForward" layoutX="356.0" layoutY="545.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="94.0" text="Step Forward" />
+                  <Button fx:id="pause" layoutX="470.0" layoutY="545.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="94.0" text="Pause" />
+                  <Button fx:id="play" layoutX="583.0" layoutY="545.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="94.0" text="Play" />
                </children>
             </Pane>
          </children>
